v.2.2.2 set up .flex.fullsize with min-(width/height) to avoid overlapping content in some cases when page has a scroll

--- a/src/flexbox.scss
+++ b/src/flexbox.scss
@@ -12,8 +12,8 @@ $flexbox-gap-default: 1em !default;
   }
 
   &.fullsize {
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
   }
 
   &.column {
